--- a/src/App.css
+++ b/src/App.css
@@ -1,115 +1,3 @@
-div {
-  border: none;
-  padding: 0;
-  margin: 0;
-}
-
-.main {
-  position: relative;
-  box-sizing: content-box;        
-  width: 200px; 
-  height: 200px;
-  margin: 100px auto;
-  padding: 1px;       
-  border: 1px solid rgb(72, 170, 230);  
-  font-size:0;      
-}
-
-.row {        
-  display: inline-block;       
-  font-size:0;
-  /*outline: 1px red dotted; */       
-}
-
-.cell {        
-  display: inline-block;       
-  box-sizing: border-box;
-  width: 50px;  
-  height: 50px;        
-  border: 1px dotted rgba(255,255,255,0.0);
-  background: rgb(72, 170, 230) url(src/logo.svg) center center no-repeat;
-  background-clip: content-box;
-}
-
-.btn {
-  box-sizing: border-box;
-  position: absolute;       
-  width: 50px;  
-  height: 50px;        
-  border: 1px dotted rgba(255,55,255,0.5);
-  background-clip: content-box; 
-  transition: background 800ms ease-in-out,
-              display  800ms ease-in-out;                 
-}
-
-.btn__add-col {
-  bottom: -52px;
-  left: 1px;                
-}
-
-.btn__add-row {
-  right: -52px;
-  top: 1px;                
-}
-
-.btn__add {
-  background-color: rgb(243, 165, 0);
-}
-
-.btn__add:hover {
-  background-color: rgb(246, 192, 82);
-}
-
-.btn__del {
-  background-color: rgb(178, 0, 0);
-}
-
-.btn__del:hover {
-  background-color: rgb(202, 76, 73);
-}
-
-.delrow_panel {             
-  position: absolute;
-  left: -52px;
-  top: 0px;                
-  width: 50px;
-  height: 200px;
-  border: 1px dotted rgba(255,55,255,0.5);                
-}
-
-.delcol_panel {             
-  position: absolute;
-  left: 0px;
-  top: -52px;                        
-  width: 200px;
-  height: 50px;
-  border: 1px dotted rgba(255,55,255,0.5);                
-}
-
-.btn__del-col {
-  top: 0px;  // 50px 150px 200px etc
-  left: 0px;                
-}
-
-.btn__del-row {
-  left: 0px;
-  top: 0px;  // 50px 150px 200px etc
-}
-
-/* DEBUG ONLY */      
-.none {
-  visibility: hidden !important;
-  opacity: 0 !important;
-  transition: visibility 0s, opacity 0.5s linear;
-}
-
-.main:hover .btn.none {        
-  opacity: 1 !important;
-  visibility: visible !important;
-}
-/* ****** */
-
-
 .App {
   text-align: center;
 }
@@ -136,4 +24,110 @@ div {
 }
 
 
+/* lazy reset.css */
+div { 
+  border: none;
+  padding: 0;
+  margin: 0;
+}
 
+.MyTable {
+  position: relative;
+  box-sizing: content-box;
+  width: 200px; /* CELL_SIZE * CELLS_AMOUNT_IN_A_ROW */
+  margin: 133px auto; /* CELL_SIZE*2 */
+  padding: 1px;       
+  border: 1px solid rgb(72, 170, 230);  
+  font-size:0;      
+}
+
+.row {        
+  display: inline-block;       
+  font-size:0;               
+}
+
+.cell {        
+  display: inline-block;       
+  box-sizing: border-box;
+  width: 50px;  /* CELL_SIZE */
+  height: 50px;  /* CELL_SIZE */      
+  border: 1px dotted rgba(255,255,255,0.0);        
+  background-color: rgb(72, 170, 230);        
+  background-clip: content-box;
+}
+
+.AddColumnBtn,
+.AddRowBtn {
+  box-sizing: border-box;
+  position: absolute;       
+  width: 50px; /* CELL_SIZE */ 
+  height: 50px; /* CELL_SIZE */
+  border: 1px dotted rgba(255,255,255,0);
+  background-clip: content-box; 
+  transition: background 800ms ease-in-out,
+              display  800ms ease-in-out;                 
+  background-color: rgb(243, 165, 0);
+}
+
+.AddColumnBtn:hover,
+.AddRowBtn:hover {
+  background-color: rgb(246, 192, 82);
+  cursor: pointer;
+}
+
+.AddRowBtn {
+  left: 1px;
+  top: 100%;
+  margin-top: 2px;             
+}
+.AddColumnBtn {
+  top: 1px;
+  left: 100%;
+  margin-left: 2px;
+}
+
+.left_panel {             
+  position: absolute;
+  right: 100%;
+  top: 0;                
+  width: 50px; /* CELL_SIZE */
+  border: 1px dotted rgba(255,255,255,0);
+  border-right: 2px dotted rgba(255,255,255,0);                
+}
+
+.top_panel {             
+  position: absolute;
+  left: 0;
+  bottom: 100%;
+  width: 200px; /* !!!!!!!!!!!!!! same as table width*/ /* CELL_SIZE * CELLS_AMOUNT_IN_A_ROW */
+  border: 1px dotted rgba(255,255,255,0);                
+  border-bottom: 2px dotted rgba(255,255,255,0);
+}
+
+.DeleteButton {
+  position: relative;
+  display: inline-block;       
+  box-sizing: border-box;
+  width: 50px;  
+  height: 50px;        
+  border: 1px dotted rgba(255,255,255,0);
+  background-clip: content-box; 
+  background-color: rgb(178, 0, 0);
+
+  transition: background .9s ease-in-out,
+              display  .9s ease-in-out,                    
+              opacity .4s linear;                 
+}
+
+.DeleteButton.show {
+  opacity: 1;
+}
+
+.DeleteButton.hide {
+  opacity: 0.0;
+}
+  
+.DeleteButton:hover {
+  background-color: rgb(202, 76, 73);
+  cursor: pointer;
+}
