--- a/src/App.css
+++ b/src/App.css
@@ -1,138 +1,26 @@
-.App {
+.app {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
+.app__logo {
+  animation: app__logo--spin infinite 20s linear;
   height: 80px;
 }
 
-.App-header {
+.app__header {
   background-color: #222;
-  height: 150px;
   padding: 20px;
+  margin-bottom: 20px;
   color: white;
+  clear: both;
 }
 
-.App-intro {
+.app__intro {
   font-size: large;
 }
 
-@keyframes App-logo-spin {
+@keyframes app__logo--spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
 
-
-/* lazy reset.css */
-div { 
-  border: none;
-  padding: 0;
-  margin: 0;
-}
-
-.MyTable {
-  position: relative;
-  box-sizing: content-box;
-  width: 200px; /* CELL_SIZE * CELLS_AMOUNT_IN_A_ROW */
-  margin: 133px auto; /* CELL_SIZE*2 */
-  padding: 1px;       
-  border: 1px solid rgb(72, 170, 230);  
-  font-size:0;  
-}
-
-.row {        
-  display: inline-block;       
-  font-size:0;               
-}
-
-.cell {        
-  display: inline-block;       
-  box-sizing: border-box;
-  width: 50px;  /* CELL_SIZE */
-  height: 50px;  /* CELL_SIZE */      
-  border: 1px dotted rgba(255,255,255,0.0);        
-  background-color: rgb(72, 170, 230);        
-  background-clip: content-box;
-}
-
-.AddColumnBtn,
-.AddRowBtn {
-  box-sizing: border-box;
-  position: absolute;       
-  width: 50px; /* CELL_SIZE */ 
-  height: 50px; /* CELL_SIZE */
-  border: 1px dotted rgba(255,255,255,0);
-  background-clip: content-box;
-  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAMAAAC67D+PAAAAElBMVEUAAAD3x2j////62Zf61pD979TXPpZaAAAAAXRSTlMAQObYZgAAACZJREFUeAFjAAJGJiYGKGDGy2SCA2QmCzMzKxMTMzMzI24TWCBMABfAAHYeG94/AAAAAElFTkSuQmCC);
-  background-position: center center;
-  background-repeat: no-repeat;
-  transition: background 800ms ease-in-out,
-              display  800ms ease-in-out;                 
-  background-color: rgb(243, 165, 0);
-}
-
-.AddColumnBtn:hover,
-.AddRowBtn:hover {
-  background-color: rgb(246, 192, 82);
-  cursor: pointer;
-}
-
-.AddRowBtn {
-  left: 1px;
-  top: 100%;
-  margin-top: 2px;             
-}
-.AddColumnBtn {
-  top: 1px;
-  left: 100%;
-  margin-left: 2px;
-}
-
-.left_panel {             
-  position: absolute;
-  right: 100%;
-  top: 0;                
-  width: 50px; /* CELL_SIZE */
-  border: 1px dotted rgba(255,255,255,0);
-  border-right: 2px dotted rgba(255,255,255,0);                
-}
-
-.top_panel {             
-  position: absolute;
-  left: 0;
-  bottom: 100%;
-  width: 200px; /* !!!!!!!!!!!!!! same as table width*/ /* CELL_SIZE * CELLS_AMOUNT_IN_A_ROW */
-  border: 1px dotted rgba(255,255,255,0);                
-  border-bottom: 2px dotted rgba(255,255,255,0);  
-}
-
-.DeleteButton {
-  position: relative;
-  display: inline-block;       
-  box-sizing: border-box;
-  width: 50px;  
-  height: 50px;        
-  border: 1px dotted rgba(255,255,255,0);
-  background-clip: content-box; 
-  background-color: rgb(178, 0, 0);
-  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA4AAAAOCAMAAAAolt3jAAAAD1BMVEUAAAD////fkpHQYF/dioml9AsKAAAAAXRSTlMAQObYZgAAABZJREFUeAFjoCVghANsXBYmKGCmqqUAEHQALNcMbN4AAAAASUVORK5CYII=);
-  background-position: center center;
-  background-repeat: no-repeat;
-  transition: background .6s ease-in-out,
-              display  .6s ease-in-out,                    
-              opacity .2s linear;                 
-}
-
-.DeleteButton.show {
-  opacity: 1;
-}
-
-.DeleteButton.hide {
-  opacity: 0.0;
-}
-  
-.DeleteButton:hover {
-  background-color: rgb(202, 76, 73);
-  cursor: pointer;
-}
