Updating table rendering and init data generating

--- a/src/MyTable.css
+++ b/src/MyTable.css
@@ -36,7 +36,7 @@
   border: none;
   background-position: center center;
   background-repeat: no-repeat;
-  transition: background .8s ease-in-out;
+  transition: all .4s ease-in-out;
   cursor: pointer;
 }
 
@@ -49,7 +49,6 @@
 .mytable__btn--del {
   background-color: rgb(178, 0, 0);
   background-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNTAiIGhlaWdodD0iNTAiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PGc+PGxpbmUgc3Ryb2tlLWxpbmVjYXA9InNxdWFyZSIgaWQ9Im1pbnVzX3NpZ24iIHkyPSIyNSIgeDI9IjMwIiB5MT0iMjUiIHgxPSIyMCIgc3Ryb2tlLXdpZHRoPSIzIiBzdHJva2U9IndoaXRlIiAvPjwvZz48L3N2Zz4=');
-  transition: all .3s ease-out;
 }
 
 .mytable__btn--del:hover {
